# utility-propagation

./: CMakeLists.torch.txt  CMakeLists.txt  README.md  atari_experiment.cpp  columnar_lstm_mnist.cpp  compile_libtorch.cpp  experiment_animal_learning.cpp  experiment_animal_learning_snap.cpp  experiment_bptt.cpp  experiment_columnar_mnist.cpp  experiment_constructive_mnist.cpp  experiment_mnist_binary.cpp  experiment_mnist_binary_tbptt.cpp  experiment_mnist_binary_tbptt_libtorch.cpp  experiment_mnist_pixel_binary.cpp  experiment_mnist_pixel_binary_tbptt.cpp  experiment_snap1.cpp  graph_expeirments.cpp  list_of_inp  lsm_test_case.cpp  lstm_mnist_classification.cpp  mnist_classification.cpp  mnist_classification_mlp.cpp  recurrent_experiment.cpp  requirements.txt  train_mnist.py  train_mnist_bptt.py  train_mnist_constructive.py
Paper_draft/: README.md  citations.bib  columnar_networks.tex
Paper_draft/ICML/: citations.bib  columnar_networks.aux  columnar_networks.bbl  columnar_networks.blg  columnar_networks.tex  old_intro.tex
Paper_draft/JMLR/: sample.aux  sample.bbl  sample.bib  sample.blg  sample.out  sample.tex
Paper_draft/JMLR/figures/: ColumnarPlot.graffle  plt_animal.eps  plt_animal_preds400.eps  plt_animal_preds400_tight.eps  plt_animal_preds400_tight_withaxlabel.eps  plt_animal_preds800.eps
Python_DenseLSTM/: NoisyPatternsTBTT.py  README.md  credentials.json  parameter_calculation.py
Python_DenseLSTM/configs/classification/: gradient_alignment.py
Python_DenseLSTM/environment/: animal_learning.py
Python_DenseLSTM/experiment/: experiment.py
Python_DenseLSTM/model/: lstm.py
Python_DenseLSTM/utils/: utils.py
experiment_configs/: 1500_to_500.json  amimal_learning_snap.json  amimal_learning_snap_2.json  atari_columnar.json  atari_columnar_2.json  atari_columnar_all_envs.json  atari_columnar_all_envs_2.json  atari_constructive.json  atari_constructive_all_envs.json  atari_constructive_all_envs_2.json  atari_constructive_all_seeds.json  atari_hybrid.json  atari_hybrid_2.json  atari_hybrid_all_envs.json  atari_hybrid_all_envs_seeds.json  atari_snap_all_envs_2.json  atari_tbtt.json  atari_tbtt_all_envs.json  atari_tbtt_all_envs_2.json  atari_tbtt_all_envs_seeds.json  atari_tbtt_long.json  atari_tbtt_rmsprop.json  binary_experiment.json  constructive_isi.json  experiment_1_0.json  experiment_1_0_more_seeds.json  experiment_1_1.json  experiment_1_1_more_seeds_50_features.json  experiment_1_2.json  experiment_1_2_more_seeds.json  experiment_1_3.json  experiment_1_3_more_seeds.json  experiment_1_4.json  experiment_1_5.json  experiment_1_6.json  experiment_1_6_more.json  experiment_1_6_tbtt_results.json  experiment_1_7.json  gt_experiment.json  hybrid_50_ISI.json  (+7 more)
include/: experience.pb.h
include/environments/: cartpole.h  proto_prediction_environments.h  tmaze.h
include/environments/animal_learning/: tracecondioning.h
include/experiment/: Database.h
include/nn/: graphfactory.h  neuron.h  synapse.h  utils.h  weight_initializer.h
include/nn/networks/: base_lstm.h  columnar_lstm.h  dense_lstm.h  graph.h  lstm_bptt.h  lstm_incremental_networks.h  mlp_lstm.h  recurrent_classifier_network.h  recurrent_network.h  recurrent_network_multilayer.h  snap1.h  td_lambda.h  vertex.h
notebooks/: 0001_row_mnist_step_size_sweeps.ipynb  0004_row_mnist_combined.ipynb  0004_row_mnist_paper_plots.ipynb  0005_animal_learning_paper_plots.ipynb  0006_animal_learning_tbptt_sweep.ipynb  0020_binary_mnist.ipynb  0021_binary_mnist_rowwise_fixed.ipynb  0022_binary_mnist_pixelwise.ipynb  0041_animal_learning_fixed.ipynb  0042_animal_learning_feature_corr.ipynb
proto_files/: experience.pb.cc  experience.pb.h  experience.proto
pybind_interface/: interface.cpp
pytorch_tests/: lstm_model.py  lstm_test.py  lstm_test_2.py
src/environments/: proto_prediction_environments.cpp
src/environments/animal_learning/: tracepatterning.cpp
src/experiment/: Database.cpp  Experiment.cpp
src/nn/: graphfactory.cpp  lstm.cpp  neuron.cpp  synapse.cpp  utils.cpp  weight_initializer.cpp
src/nn/networks/: Snap1.cpp  TDLambda.cpp  columnar_lstm.cpp  dense_lstm.cpp  edge.cpp  graph.cpp  graph_utility_prop_implementations.cpp  lstm_bptt.cpp  lstm_incremental_networks.cpp  mlp_lstm.cpp  network_factory.cpp  neural_network.cpp  recurrent_classifier_network.cpp  recurrent_network.cpp  recurrent_network_multilayer.cpp  torch_LSTM.cpp  vertex.cpp
src_py/envs/: mnist.py
src_py/models/: lstm.py  rnn.py
src_py/utils/: logging_manager.py  utils.py
